tdf#126879 - Drop obsolete DOCTYPE HTML 4.0

and use the HTML5 DOCTYPE declaration

Change-Id: I00a769f2c8da876fd9435343c72f4d7685bc0cb3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/120378
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>